authorization,actionlinks,customer registration

--- a/Lahjapaja_CIM/Lahjapaja_CIM.csproj
+++ b/Lahjapaja_CIM/Lahjapaja_CIM.csproj
@@ -135,6 +135,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\ASPNETDB.MDF" />
+    <Content Include="App_Data\ASPNETDB_log.ldf">
+      <DependentUpon>ASPNETDB.MDF</DependentUpon>
+    </Content>
     <Content Include="App_Data\CIM_db.mdf" />
     <Content Include="App_Data\CIM_db_log.ldf">
       <DependentUpon>CIM_db.mdf</DependentUpon>
@@ -281,7 +285,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>64810</DevelopmentServerPort>
+          <DevelopmentServerPort>23058</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
